// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fields/ForeignKeyField displayRender should render correct value 1`] = `<div>User 1</div>`;

exports[`fields/ForeignKeyField displayRender should render correct value 2`] = `<div>User 3</div>`;

exports[`fields/ForeignKeyField inputRender should render correct input field 1`] = `
<select>
  <option value="1">User 1</option>
  <option value="2">User 2</option>
  <option value="3">User 3</option>
</select>
`;

exports[`fields/ForeignKeyField inputRender should render correct input field 2`] = `
<select>
  <option value="1">User 1</option>
  <option value="2">User 2</option>
  <option value="3">User 3</option>
</select>
`;

exports[`fields/ForeignKeyField inputRender should render correct input field without value 1`] = `
<select>
  <option value="1">User 1</option>
  <option value="2">User 2</option>
  <option value="3">User 3</option>
</select>
`;

exports[`fields/ForeignKeyField inputRender should render disabled input field 1`] = `
<select disabled="">
  <option value="1">User 1</option>
  <option value="2">User 2</option>
  <option value="3">User 3</option>
</select>
`;

exports[`fields/ForeignKeyField inputRender should render readonly input field 1`] = `
<select readonly="">
  <option value="1">User 1</option>
  <option value="2">User 2</option>
  <option value="3">User 3</option>
</select>
`;

exports[`fields/ForeignKeyField inputRender should set value correct on change 1`] = `
<select>
  <option value="1">User 1</option>
  <option value="2">User 2</option>
  <option value="3">User 3</option>
</select>
`;
